add styles to the header

--- a/index.html
+++ b/index.html
@@ -7,9 +7,60 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Dinner Shopping List</title>
 </head>
 <body>
-    
+    <section class="header">
+        <h2>CSS Dinner Shopping List</h2>
+        <p class="header">Let's go the mall!</p>
+    </section>
+    <div class="container">
+        <main>
+            <ul class="shopping-list">
+                <li>
+                    <label for="">
+                        <input type="checkbox">
+                        <p>A lot of pickles <span>(for the next lessons about CSS)</span></p>
+                    </label>
+                </li>
+                <li>
+                    <label for="">
+                        <input type="checkbox">
+                        <p>10 apples <span>(for more CSS manipulations)</span> </p>
+                    </label>
+                </li>
+                <li>
+                    <label for="">
+                        <input type="checkbox">
+                        <p>20 oranges <span>(because they are awesome)</span></p>
+                    </label>
+                </li>
+                <li>
+                    <label for="">
+                        <input type="checkbox">
+                        <p>13 plates <span>(hm... they always disappear)</span></p>
+                    </label>
+                </li>
+                <li>
+                    <label for="">
+                        <input type="checkbox">
+                        <p>15 bentos</p>
+                    </label>
+                </li>
+                <li>
+                    <label for="">
+                        <input type="checkbox">
+                        <p>1 bottle of Sake <span>(for my friends)</span></p>
+                    </label>
+                </li>
+            </ul>
+        </main>
+
+        <footer class="footer">
+            <p>Bon appetit :)</p>
+        </footer>
+    </div>
 </body>
 </html>
